add labguage string